style for admin section

--- a/app/assets/stylesheets/admin_section.sass
+++ b/app/assets/stylesheets/admin_section.sass
@@ -179,3 +179,15 @@
   width: 230px
   border-radius: 5px
   background-color: #3f4eae
+
+.row-box
+  border-radius: 5px
+  background-color: #F8F8F8
+  margin: 0.5rem 0
+  padding: 0 0.5rem
+  border: 1px solid #dfe3e8
+
+.row-box-text
+  color: #637381
+  line-height: 3rem
+  text-align: center
