--- a/app/assets/stylesheets/side_bar_nav.sass
+++ b/app/assets/stylesheets/side_bar_nav.sass
@@ -57,6 +57,9 @@ body
   padding: 0 1rem
   padding-right: 0
 
+.js-load-more
+  width: 397px
+
 @media screen and (max-height: 450px)
   .sidenav
     padding-top: 15px
@@ -108,3 +111,5 @@ body
     padding: 0
   .div-style
     padding: 0 !important
+  .js-load-more
+    width: 100%
