fix: added the correct new details for launch

--- a/app/assets/stylesheets/filter.sass
+++ b/app/assets/stylesheets/filter.sass
@@ -138,6 +138,10 @@
   background-size: cover
   margin-left: auto
 
+.desktop-filter
+  max-height: 20em
+  overflow-y: scroll
+
 #shopify-section-cust-footer
 .penbtn-container
 .main-container
