fix: updated a few filters on production

--- a/app/assets/stylesheets/products.sass
+++ b/app/assets/stylesheets/products.sass
@@ -169,3 +169,10 @@
   border-left: 7px solid transparent
   border-right: 7px solid transparent
   border-top: 7px solid black
+
+
+.js-product-group
+  display: none
+
+.js-product-group:nth-child(-n+12)
+  display: block
