BT- fix for modal size, position and structure

--- a/app/assets/stylesheets/modal.sass
+++ b/app/assets/stylesheets/modal.sass
@@ -3,7 +3,8 @@
   margin-bottom: 1rem
   &__small
     font-size: 16px
-    margin-bottom: 1rem
+    line-height: 19px
+    margin-bottom: 0.5rem
   &__price
     color: #fe89b5
     font-size: 22px
