--- a/app/assets/stylesheets/search_results_index.sass
+++ b/app/assets/stylesheets/search_results_index.sass
@@ -17,15 +17,14 @@
   display: none
   background-color: #ffffff
   width: 75%
-  height: 522px
+  height: 540px
   position: fixed
   z-index: 9999999
   left: 0
-  margin-left: 12.5%
+  max-width: 50rem
+  margin-left: 50%
+  transform: translate(-50%)
   top: 0
-  overflow: auto
-  padding: 1rem
-
 
 .modal
   display: none
